--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             <div class="pages">
                 <a href="page link">Home</a>
                 <a href="page link">Login</a>
-                <a href="page link">Registration</a>
+                <a href="/html/registration.html">Registration</a>
                 <a href="page link">Products</a>
                 <a href="page link">Reviews</a>
                 <a href="page link">About Us</a>
