--- a/html/registration.html
+++ b/html/registration.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/registration.css">
 </head>
 <body>
     <h1>Registration Form</h1>
+    <br><br><br>
     <form action="submit.php" method="POST">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required><br><br>
@@ -39,4 +40,6 @@
     </form>
 
 </body>
+
+
 </html>
