--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
             <img src="put the link here">
             <div class="pages">
                 <a href="page link">Home</a>
-                <a href="page link">Login</a>
+                <a href="/html/login.html">Login</a>
                 <a href="/html/registration.html">Registration</a>
                 <a href="page link">Products</a>
                 <a href="page link">Reviews</a>
