linked to navbar

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
                 <a href="page link">Home</a>
                 <a href="/html/login.html">Login</a>
                 <a href="/html/registration.html">Registration</a>
-                <a href="page link">Products</a>
+                <a href="/html/products.html">Products</a>
                 <a href="page link">Reviews</a>
                 <a href="page link">About Us</a>
 
