correct numbering issues

--- a/html/about.html
+++ b/html/about.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <title>Document</title>
 </head>
 <body>
     <span class="hero"></span>
@@ -21,21 +20,7 @@
                 <a href="page link">About Us</a>
 
             </div>
+
             
-    <h1>Login</h1>
-    <form method="post" action="/login">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-
-        <label for="remember">
-            <input type="checkbox" id="remmeber" name="remember">Remember Me
-        </label>
-
-        <input type="submit" value="Login">
-
-    </form>
 </body>
 </html>
