--- a/html/registration.html
+++ b/html/registration.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="/css/registration.css">
 </head>
 <body>
+    <span class="hero"></span>
+    <div class="all">
+        <nav class="navbar">
+            <img src="put the link here">
+            <div class="pages">
+                <a href="page link">Home</a>
+                <a href="/html/login.html">Login</a>
+                <a href="/html/registration.html">Registration</a>
+                <a href="/html/products.html">Products</a>
+                <a href="page link">Reviews</a>
+                <a href="page link">About Us</a>
+
+            </div>
+            
     <h1>Registration Form</h1>
     <br><br><br>
     <form action="submit.php" method="POST">
