--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,19 @@
                 <a href="page link">About Us</a>
 
             </div>
-
+            <button class="registration" href="/html/registration.html">Register Now</button>
         </nav>
-        
-
-    </div>
+        <div class="header">
+            <h1>SHOP GREEN AT EVERGREEN!</h1>
+            <p>where we believe SMALL changes can make a BIG difference</p>
+            <img src="">
+        </div>
+        <div class="products">
+            <img class="img1" src="">
+            <img class="img2" src="">
+            <img class="img3" src="">
+        </div>
+        </div>
 
 </body>
 </html>
