--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <span class="hero"></span>
     <div class="all">
         <nav class="navbar">
-            <img src="put the link here">
+            <img src="/images/logoo.png">
             <div class="pages">
                 <a href="page link">Home</a>
                 <a href="/html/login.html">Login</a>
@@ -27,13 +27,21 @@
         <div class="header">
             <h1>SHOP GREEN AT EVERGREEN!</h1>
             <p>where we believe SMALL changes can make a BIG difference</p>
-            <img src="">
+            <img src="https://www.goodnet.org/photos/281x197/40703_hd.jpg">
         </div>
         <div class="products">
-            <img class="img1" src="">
-            <img class="img2" src="">
-            <img class="img3" src="">
+            <img class="hydroflask" src="https://i.pinimg.com/564x/0d/9b/b5/0d9bb5126776999e9fa39120afdffc2b.jpg">
+            <img class="metal straws" src="https://i.pinimg.com/736x/1a/7d/32/1a7d3297e1767774921bd1326bfd1a90.jpg">
+            <img class="reversible tote" src="https://i.pinimg.com/736x/e5/10/42/e51042e1be6db2372d6b67be5d82a879.jpg">
         </div>
+        <div>
+            <h1>Buy now and get 20% off your next purchase</h1>
+            <p>We offer a carefully curated selection of sustainable products<br> that are not only good for the planet                but also stylish and functional. 
+                <br><br> Sit it back and relax because we have everything you need to live a more sustainable lifestyle.
+                </p>
+
+        </div>
+           
         </div>
 
 </body>
