--- a/html/login.html
+++ b/html/login.html
@@ -11,16 +11,16 @@
     <span class="hero"></span>
     <div class="all">
         <nav class="navbar">
-            <img src="put the link here">
             <div class="pages">
-                <a href="page link">Home</a>
+                <a href="/html/index.html">Home</a>
                 <a href="/html/login.html">Login</a>
                 <a href="/html/registration.html">Registration</a>
                 <a href="/html/products.html">Products</a>
-                <a href="page link">Reviews</a>
-                <a href="page link">About Us</a>
+                <a href="/html/about.html">About Us</a>
+                <a href="/html/checkout.html">Checkout</a>
 
             </div>
+        </nav>
             
     <h1>Login</h1>
     <form method="post" action="/login">
@@ -37,5 +37,26 @@
         <input type="submit" value="Login">
 
     </form>
+    <footer>
+        <div class="contact-info">
+          <p>123 Main St, Evergreen, CO 80439</p>
+          <p>Phone: (555) 555-5555</p>
+          <p>Email: info@evergreenco.com</p>
+        </div>
+        
+        <div class="privacy-policy">
+          <a href="https://www.example.com/privacy-policy">Privacy Policy</a>
+        </div>
+             <div class="bottom-bar">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <p>&copy; 2023 EVERGREEN. 
+                        <br>All rights reserved.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
 </body>
 </html>
