--- a/html/registration.html
+++ b/html/registration.html
@@ -11,16 +11,17 @@
     <span class="hero"></span>
     <div class="all">
         <nav class="navbar">
-            <img src="put the link here">
             <div class="pages">
-                <a href="page link">Home</a>
+                <a href="/html/index.html">Home</a>
                 <a href="/html/login.html">Login</a>
                 <a href="/html/registration.html">Registration</a>
                 <a href="/html/products.html">Products</a>
-                <a href="page link">Reviews</a>
-                <a href="page link">About Us</a>
+                <a href="/html/about.html">About Us</a>
+                <a href="/html/checkout.html">Checkout</a>
 
             </div>
+            <button class="registration" href="/html/registration.html">Register Now</button>
+        </nav>
             
     <h1>Registration Form</h1>
     <br><br><br>
@@ -52,6 +53,35 @@
         <label for="radio4">Ad</label><br><br>
 
         <input type="submit" value="Submit">
+
+        <div class="input_field radio_option">
+            <input type="radio" name="radiogroup1" id="rd1">
+            <label for="rd1">Male</label>
+            <input type="radio" name="radiogroup1" id="rd2">
+            <label for="rd2">Female</label>
+            </div>
+            <div class="input_field select_option">
+              <select>
+                <option>Select a country</option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+              </select>
+              <div class="select_arrow"></div>
+            </div>
+          <div class="input_field checkbox_option">
+              <input type="checkbox" id="cb1">
+              <label for="cb1">I agree with terms and conditions</label>
+          </div>
+          <div class="input_field checkbox_option">
+              <input type="checkbox" id="cb2">
+              <label for="cb2">I want to receive the newsletter</label>
+          </div>
+        <input class="button" type="submit" value="Register" />
+      </form>
+    </div>
+  </div>
+</div>
+</div>
     </form>
 
 </body>
