--- a/html/registration.html
+++ b/html/registration.html
@@ -16,7 +16,6 @@
                 <a href="/html/login.html">Login</a>
                 <a href="/html/registration.html">Registration</a>
                 <a href="/html/products.html">Products</a>
-                <a href="/html/about.html">About Us</a>
                 <a href="/html/checkout.html">Checkout</a>
 
             </div>
@@ -76,7 +75,8 @@
               <input type="checkbox" id="cb2">
               <label for="cb2">I want to receive the newsletter</label>
           </div>
-        <input class="button" type="submit" value="Register" />
+        <input class="button" type="submit" value="Register" /><br>
+        
       </form>
     </div>
   </div>
@@ -84,6 +84,7 @@
 </div>
     </form>
 
+    
 </body>
 
 
